# facenet-pytorch

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  README_cn.md  __init__.py  codecov.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: python.yml
examples/: .gitignore  face_tracking.ipynb  face_tracking_cn.ipynb  finetune.ipynb  finetune_cn.ipynb  infer.ipynb  infer_cn.ipynb  lfw_evaluate.ipynb  lfw_evaluate_cn.ipynb
facenet_pytorch/: __init__.py
facenet_pytorch/models/: inception_resnet_v1.py  mtcnn.py
facenet_pytorch/models/utils/: detect_face.py  download.py  tensorflow2pytorch.py  training.py
models/: inception_resnet_v1.py  mtcnn.py
models/utils/: detect_face.py  download.py  tensorflow2pytorch.py  training.py
tests/: actions_test.py  perf_test.py
